--- a/index.html
+++ b/index.html
@@ -190,24 +190,27 @@
             const text = input.value.trim();
             if(!text) return;
 
+            // User ko message screen ma pathaune
             input.value = "";
             msgContainer.innerHTML += `<div class="msg user-msg">${text}</div>`;
             msgContainer.scrollTop = msgContainer.scrollHeight;
 
-            // Show Thinking State
+            // Thinking state (Loading...)
             const thinkingId = "thinking-" + Date.now();
             msgContainer.innerHTML += `<div class="msg bot-msg" id="${thinkingId}">...</div>`;
             
             try {
-                const response = await fetch("https://YOUR-WORKER-URL.workers.dev", {
+                // Tapaiko Cloudflare Worker URL yahan rakhiyeko chha
+                const response = await fetch("https://morning-bush-8bd5.kushalphuyal.workers.dev/", {
                     method: "POST",
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify({ message: text })
                 });
+
                 const reply = await response.text();
                 document.getElementById(thinkingId).innerText = reply;
             } catch (err) {
-                document.getElementById(thinkingId).innerText = "I am having trouble connecting. Please try again later!";
+                document.getElementById(thinkingId).innerText = "Connect huna sakiyena. API key check garnu-hos!";
             }
             msgContainer.scrollTop = msgContainer.scrollHeight;
         }
@@ -218,5 +221,7 @@
             if(e.key === "Enter") sendMessage();
         });
     </script>
+    
 </body>
 </html>
+
