--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="WJWTJi0ERpNihBO441wbu4iw1s20_mTFMYSAICYW-OA" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kushal Phuyal | AI Accountant & Portfolio</title>
