--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta name="google-site-verification" content="WJWTJi0ERpNihBO441wbu4iw1s20_mTFMYSAICYW-OA" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <link rel="canonical" href="https://kushalphuyal.com.np/" />
+<meta name="keywords" content="Kushal Phuyal, AI Accountant, Finance Automation Nepal, Portfolio" />
+<meta property="og:title" content="Kushal Phuyal | AI Accountant & Portfolio" />
+<meta property="og:url" content="https://kushalphuyal.com.np/" />
+<meta property="og:image" content="https://kushalphuyal.com.np/images/profile.png" />
+
   <title>Kushal Phuyal | AI Accountant & Portfolio</title>
   <meta name="description" content="Kushal Phuyal – AI Accountant from Okhaldhunga, Nepal. Building smart finance tools powered by AI." />
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet" />
